correctly aligning titles on the archive page

--- a/web/layout/primary.less
+++ b/web/layout/primary.less
@@ -443,6 +443,8 @@ h1, h2, h3
         max-width: 100%;
         width: 100%;
 
+        text-align: left;
+
         a
         {
             width: 100%;
